# ASPDAC-tandem

./: .gitmodules  .travis.yml  README.md  azure-pipelines.yml
ILAng/: CMakeLists.txt
ILAng/include/ilang/: ilang++.h
ILAng/scripts/travis/: build.sh
ILAng/src/: ilang++.cc
ILAng/src/target-sc/: CMakeLists.txt  ilator.cc  ilator_dfs.cc  tandem_generator.cc
ILAng/test/: CMakeLists.txt
bug-detection/: insert_bop_error.py  insert_ite_error.py  insert_no_error.py
bug-detection/GB/sim/: CMakeLists.txt  script.sh
bug-detection/GB/sim-e1/: CMakeLists.txt
bug-detection/GB/sim-e1/include/: GBHigh_ila_top.h
bug-detection/GB/sim-e1/include/include/: GBHigh.h
bug-detection/GB/sim-e1/src/: compute.cc  idu_Read.cc
bug-detection/GB/sim-e2/: CMakeLists.txt  ws_csv_i.py
bug-detection/GB/sim-e3/: CMakeLists.txt  ws_csv_v.py
bug-detection/GB/verilog/: hls_target_call_Loop_LB2D_shift_proc.v
bug-detection/GB/verilog-e1/: hls_target_call_Loop_LB2D_buf_proc.v
bug-detection/GB/verilog-e2/: hls_target_Loop_1_proc.v
bug-detection/GB/verilog-e3/: hls_target_mac_muladd_12ns_8ns_20ns_20_1.v
bug-detection/aes-block/sim/: CMakeLists.txt
bug-detection/aes-block/sim-e1/: CMakeLists.txt
bug-detection/aes-block/sim-e2/: CMakeLists.txt
bug-detection/aes-block/sim-e2/src/: AES_tandem.cc  all_valid_funcs_in_hier.cc  compute.cc  idu_OPERATE.cc  idu_WRITE_KEY.cc
bug-detection/aes-block/sim-e3/: CMakeLists.txt
bug-detection/aes-block/verilog-e1/: aes_top.v
bug-detection/aes-block/verilog-e2/: S.v
bug-detection/aes-block/verilog-e3/: expand_key_128.v
bug-detection/aes-round/sim/: wr_csv.py
bug-detection/piccolo/: wr_csv.py
bug-detection/piccolo/sim/: CMakeLists.txt
bug-detection/piccolo/sim-e2/: CMakeLists.txt
bug-detection/piccolo/sim-e3/: CMakeLists.txt
bug-detection/piccolo/verilog-e1/: mkCPU.v
bug-detection/piccolo/verilog-e2/: mkGPR_RegFile.v
bug-detection/piccolo/verilog-e3/: mkCPU.v
bug-detection/pico/: wr_csv.py
bug-detection/pico/sim/: CMakeLists.txt
bug-detection/pico/sim-e1/: CMakeLists.txt
bug-detection/pico/sim-e2/: CMakeLists.txt
bug-detection/pico/sim-e3/: CMakeLists.txt
bug-detection/pico/sim/app/: main.cc
bug-detection/pico/sim/src/: idu_LH.cc  idu_SLTIU.cc  idu_SRLI.cc  riscv_rtl_monitor.cc  riscv_tandem.cc
bug-detection/pico/verilog-e1/: picorv32_simple.v
bug-detection/pico/verilog-e2/: picorv32_simple.v
bug-detection/pico/verilog-e3/: picorv32_simple.v
bug-detection/rocket/sim-e1/: CMakeLists.txt
performance-eval/aes-block/: CMakeLists.txt  README.md  run.sh
performance-eval/pico/: README.md
scripts/: run_eval_perf.sh
(+256 files in other folders)
